--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
     "express": "^4.14.1",
     "source-map-support": "^0.4.11",
     "ws": "^2.1.0"
+  },
+  "dependencies": {
+    "request": "^2.81.0"
   }
 }
