--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "express": "^4.14.1",
+    "nodemon": "^1.11.0",
     "source-map-support": "^0.4.11",
     "ws": "^2.1.0"
   },
   "dependencies": {
+    "express": "^4.14.1",
     "request": "^2.81.0"
   }
 }
